# quinex

./: .gitignore  LICENSE  LICENSE.md  README.md  pyproject.toml
.github/workflows/: test_on_push.yml
dev/experiments/: README.md
dev/experiments/generative_context_extraction/: evaluate_on_test_set.sh  snakefile  snakefile_online_rules
dev/experiments/generative_context_extraction/experiments_definitions/: example_experiment.py
dev/experiments/quantity_extraction/: evaluate_on_test_set.sh  snakefile  snakefile_online_rules
dev/experiments/quantity_extraction/experiments_definitions/: example_experiment.py
dev/experiments/slurm/: config.yaml
dev/scripts/: check_max_seq_length_of_data.py  download_base_models.py  show_tokenization.py
dev/training/: README.md
dev/training/context_extraction/generative_QA_with_seq2seq_encoder_decoder_models/: run_generative_qa.sh  run_seq2seq_qa.py  trainer_seq2seq_qa.py
dev/training/context_extraction/metrics/: compute_score.py  squad_v2.py
dev/training/quantity_extraction/sequence_labeling_with_autoencoding_encoder_models/: run_ner.py
dev/training/statement_type_classification/: run_classification.py  run_classification.sh
docs/: 01_usage_guide.md  02_usage_guide_python_library.md  03_usage_guide_api.md  04_usage_guide_web_service.md
examples/: basic_usage.ipynb
examples/application_examples_from_paper/: README.md  extract_data.py  submit_extract_data.sh
examples/application_examples_from_paper/earthquakes/: plot_earthquake_data.py  query.txt
examples/application_examples_from_paper/energy_technology_lcoes/: plot_lcoe_data.py  query.txt
examples/application_examples_from_paper/perovskite_bandgaps/: plot_bandgap_data.py  query.txt
examples/application_examples_from_paper/vo2_max/: plot_VO2_max_data.py  query.txt
services/paper_analysis_service/: README.md
services/paper_analysis_service/api/manage_analyses_api/: api.py
services/paper_analysis_service/api/manage_analyses_api/config/: get_config.py  logging_config.py
services/paper_analysis_service/api/manage_analyses_api/store/: db_operations.py  disk_operations.py
services/paper_analysis_service/api/manage_analyses_api/utils/: normalize.py  schema.py  utils.py
services/paper_analysis_service/api/quinex_processing_apis/: README.md
services/paper_analysis_service/api/quinex_processing_apis/background_api/: start_background_service_on_gpu_node.sh
services/paper_analysis_service/api/quinex_processing_apis/on_demand_batch_processing_api/: headnode_api.py
services/paper_analysis_service/api/quinex_processing_apis/on_demand_batch_processing_api/batch_job/: batch_process_papers.sh  process_paper_on_compute_node.py
services/paper_analysis_service/config/: config.yml  default_analysis.json
services/paper_analysis_service/pdf_parser/: grobid.json  start_parsing_service_on_gpu_node.sh
services/paper_analysis_service/ui/analyses_dashboard/: header.py  index.py
services/paper_analysis_service/ui/analyses_dashboard/pages/: get_started.py  results.py
services/paper_analysis_service/ui/analyses_dashboard/pages/helpers/: check_processing_state.py  create_new_analysis.py  get_config.py
services/paper_analysis_service/ui/analyses_dashboard/static/: docs.md
services/paper_analysis_service/ui/paper_ui/: Dockerfile  README.md  docker-compose-dev.yml  package-lock.json  package.json  prettier.config.js  tailwind.config.js  tsconfig.json
services/paper_analysis_service/ui/paper_ui/src/app/: globals.css  layout.tsx  page.tsx  types.ts
services/paper_analysis_service/ui/paper_ui/src/app/[analysisName]/: error.tsx  loading.tsx  page.tsx
services/paper_analysis_service/ui/paper_ui/src/app/contexts/: AppContext.tsx
services/paper_analysis_service/ui/paper_ui/src/app/lib/: prepare_annotated_text.ts  prepare_author_data.ts  prepare_metadata.ts  (+3 more)
services/quinex_api/: README.md  api.py
src/quinex/: __init__.py  pipeline.py
src/quinex/analyze/citation_networks/: create_citation_network_of_quantitative_claims.py  draw_citation_graphs.py
src/quinex/analyze/create_plots/: README.md  plot.py
src/quinex/analyze/create_plots/helpers/: filter.py  group.py  normalize.py  utils.py
src/quinex/config/: model_presets.yml  model_registry.yml  models_registry.py  presets.py  task_presets.yml
src/quinex/documents/: validate.py
src/quinex/documents/papers/download/: download_papers.py  select_papers.py
src/quinex/documents/papers/download/helpers/: doi.py  elsevier.py  licenses.py  openalex.py
src/quinex/documents/papers/parse/: parse_papers.py
src/quinex/documents/papers/parse/helpers/: elsevier.py  images.py  transform.py
src/quinex/extract/subtasks/: measurement_context_extraction.py  quantity_span_identification.py  statement_type_classification.py
src/quinex/extract/utils/: transformers.py  visualize.py
src/quinex/normalize/quantity/: units.py  value.py
src/quinex/normalize/references/: grobid.py  helpers.py
src/quinex/normalize/spatial_scope/: llm_geoguessing.py  nominatim.py
src/quinex/normalize/spatial_scope/scripts/: benchmark_geoguessing.py
src/quinex/normalize/spatial_scope/static_resources/: adjective_to_location.json  country_codes_mapping.json
src/quinex/normalize/temporal_scope/: year.py
tests/: submit_test_pipeline_script.sh  test_paper.txt  test_pipeline.py
(+12 files in other folders)
