[project]
name = "quinex"
description = "quinex extracts quantitative information (that is, quantities and their measurement context) from text"
version = "0.0.0"
authors = [
    {name = "Jan Göpfert"},
]
readme = { file = "README.md", content-type = "text/markdown" }
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",     
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
]
keywords = [
    "quantitative information extraction",
    "measurement extraction",
    "information extraction",    
    "nlp",    
]

dependencies = [
    "setuptools",
    "pip",
    "tqdm",
    "thefuzz[speedup]",
    "wasabi",
    "spacy==3.7.5",
    "torch==2.1.2",
    "transformers==4.36.2",
    "sentencepiece==0.1.99",
    "protobuf==4.23.4",
    "requests==2.31.0"
]

[project.optional-dependencies]
add_onced_published = [
    "text_processing_utils", 
    "quinex_utils", 
    "llm-chunker", 
    "emoji-annotation-tool"
]
development = [
    "pytest",
    "snakemake==7.32.4",
    "tensorboard==2.15.1",
    "sentence-transformers==2.2.2",
    "datasets==2.16.1",
    "accelerate==0.25.0",
    "evaluate==0.4.1",
    "seqeval==1.2.2",
    "scikit-learn==1.3.2",
    "optuna==3.5.0",
    "numpy==1.26.3"
]
api = [
    "fastapi==0.110.1",
    "uvicorn[standard]",
    "pydantic==2.5.3"
]
paper_analysis = [    
    "fastapi==0.110.1",
    "uvicorn[standard]",
    "werkzeug==3.0.1",
    "pydantic==2.5.3",    
    "streamlit==1.41.1",
    "streamlit_agraph",
    "networkx",
    "pandas",
    "numpy==1.26.3",
    "grobid_client_python @ git+https://github.com/jangoepfert/grobid_client_python.git",
    "s2orc-doc2json @ git+https://github.com/jangoepfert/s2orc-doc2json.git",
    "lxml",
    "beautifulsoup4",
    "python-multipart==0.0.20",
]
create_plots = [
    "scipy==1.11.4",
    "plotly==5.24.1",
    "numpy==1.26.3",
    "pandas==2.3.1",
    "geopy==2.4.1",
    "kaleido"
]
optional = [
    "pymongo",
    "pymupdf",
    "papermage"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"