[project]
name = "quinex"
description = "quinex extracts quantitative information (that is, quantities and their measurement context) from text"
version = "0.0.0"
authors = [{ name = "Jan Göpfert" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
]
keywords = [
    "quantitative information extraction",
    "numeric information extraction",
    "quantititative data extraction",
    "measurement extraction",
    "information extraction",
    "quantities",
    "measurements",
    "units",
    "NLP",
    "LLM",
]

dependencies = [
    "setuptools",
    "pip",
    "tqdm",
    "thefuzz[speedup]",
    "wasabi",
    "spacy==3.7.5",
    "torch==2.1.2",
    "transformers==4.36.2",
    "sentencepiece==0.1.99",
    "protobuf==4.23.4",
    "requests==2.31.0",
    "pandas==2.3.1",
    "text-processing-utils==0.0.0",
    "quinex-utils==0.0.0",
]

[project.urls]
Homepage = "https://github.com/FZJ-IEK3-VSA/quinex"
Issues = "https://github.com/FZJ-IEK3-VSA/quinex/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",
    "snakemake==7.32.4",
    "tensorboard==2.15.1",
    "sentence-transformers==2.2.2",
    "datasets==2.16.1",
    "accelerate==0.25.0",
    "evaluate==0.4.1",
    "seqeval==1.2.2",
    "scikit-learn==1.3.2",
    "optuna==3.5.0",
    "numpy==1.26.3",
]
api = ["fastapi==0.110.1", "uvicorn[standard]", "pydantic==2.5.3"]
paper_analysis = [
    "fastapi==0.110.1",
    "uvicorn[standard]",
    "werkzeug==3.0.1",
    "pydantic==2.5.3",
    "streamlit==1.41.1",
    "streamlit_agraph",
    "networkx",
    "pandas",
    "numpy==1.26.3",
    "lxml",
    "beautifulsoup4",
    "python-multipart==0.0.20",
]
plotting = [
    "scipy==1.11.4",
    "plotly==5.24.1",
    "numpy==1.26.3",
    "geopy==2.4.1",
    "kaleido",
]
optional = ["pymongo", "pymupdf", "papermage"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-data]
"quinex.config" = ["*.yml"]
"quinex.normalize.spatial_scope.static_resources" = ["*.json"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
